readme is updated

--- a/README
+++ b/README
@@ -2,3 +2,5 @@ Demoniac Flash Game Framework
 =============================
 
 A simple game framework written in as3 for creating 2D games 
+
+I develop this framwoek in my spare time. The development currently is not active but it is not dead yet. I will put some updates in early 2012. 
